[package]
name = "slonik_rt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "1.3.0"
crossbeam = "0.7.3"
futures = "0.3.3"
num_cpus = "1.12.0"
once_cell = "1.3.1"
pin-project-lite = "0.1.2"
futures-timer = "2.0.2"
pyo3 = { version = "0.9.0-alpha.1" }
